trunk/Archive2/73/8178b5920d292e/output
main.cpp:4:60: error: cannot dynamic_cast 'b' (of type 'int*') to type 'const volatile int*' (target is not pointer or reference to class)
 const volatile int *a = dynamic_cast<const volatile int*>(b);
                                                            ^
